// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyCombo > (Snapshot) renders modifier combos 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
  >
    <span
      class="inline-flex items-center gap-1"
    >
      <kbd
        class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
        role="kbd"
      >
        Ctrl
      </kbd>
      <kbd
        class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
        role="kbd"
      >
        →
      </kbd>
    </span>
    <span
      class="inline-flex items-center gap-1"
    >
      <kbd
        class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
        role="kbd"
      >
        Ctrl
      </kbd>
      <kbd
        class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
        role="kbd"
      >
        M
      </kbd>
    </span>
    <span
      class="inline-flex items-center gap-1"
    >
      <kbd
        class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
        role="kbd"
      >
        Ctrl
      </kbd>
      <kbd
        class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
        role="kbd"
      >
        ,
      </kbd>
    </span>
    <span
      class="inline-flex items-center gap-1"
    >
      <kbd
        class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
        role="kbd"
      >
        Shift
      </kbd>
      <kbd
        class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
        role="kbd"
      >
        Alt
      </kbd>
      <kbd
        class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
        role="kbd"
      >
        P
      </kbd>
    </span>
  </div>
</div>
`;

exports[`KeyCombo > (Snapshot) renders single key 1`] = `
<div>
  <span
    class="inline-flex items-center gap-1"
  >
    <kbd
      class="bg-muted text-foreground inline-flex min-w-6 items-center justify-center rounded border border-white/10 px-1.5 py-0.5 font-mono text-xs"
      role="kbd"
    >
      Space
    </kbd>
  </span>
</div>
`;
